# yt2bl

./: .env.example  .gitignore  CLAUDE.md  INSTALL_GUIDE.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  example.md  pyproject.toml  quick_upload.py  run.py  setup.py  setup.sh  test_app.py
.kiro/settings/: settings.json
prompts/: description.md  generate_tags.md  generate_title.md  translate.md
scripts/: author_videonum.txt  crontab.example  quick_test.sh  run_dev.sh  run_subscription_monitor.sh  test_minimal.sh  test_singleton_lock.sh  yt2bl-monitor.service.example
src/: __main__.py  main.py  subscription_monitor.py
src/bilibili/: content_optimizer.py  models.py  uploader.py
src/core/: subtitle_processor.py  video_processor.py
src/utils/: config.py  fix_you_srt_tl.py  logger.py
src/youtube/: downloader.py  models.py  searcher.py
test/: test_chinese_style.py  test_merge_algorithm.py  test_subtitle_translation.py  test_video_processor.py  test_youtube_searcher.py
